# happ

./: .hc  Cargo.toml  Dockerfile  Dockerfile.file-storage-provider  README.md  default.nix  execute.sh
.github/workflows/: main.yml
.sandbox/F0OAd-RcKjOxgm8Od3mQL/: conductor-config.yaml
.sandbox/F0OAd-RcKjOxgm8Od3mQL/cell-uhC0kFz1Nk6gCq-V2VKMwGvQndD15l2vuzhOu7XSW701VP80F13Vp-uhCAkCNnbja8w4W_znmL4gK5hyq4ZYq2aNE2jG4I684Z1Mb5BQUhn/: lock.mdb
.sandbox/F0OAd-RcKjOxgm8Od3mQL/conductor/: lock.mdb
.sandbox/F0OAd-RcKjOxgm8Od3mQL/keystore/: store
.sandbox/F0OAd-RcKjOxgm8Od3mQL/wasm/: lock.mdb
assets/blocky.dna.workdir/: blocky.wasm  dna.json
assets/calendar_events.dna.workdir/: bundle.js  calendar_events.wasm  dna.json
assets/file_storage.dna.workdir/: bundle.js  dna.json  file_storage.wasm
assets/profiles.dna.workdir/: bundle.js  dna.json  profiles.wasm
assets/transactor.dna.workdir/: bundle.js  dna.json  transactor.wasm
compository.dna.workdir/: compository.dna  dna.json  dna.yaml
dnas/compository/: Cargo.toml
dnas/compository/tests/: package-lock.json  package.json
dnas/compository/zomes/file_storage_gateway/: Cargo.toml
happ/: compository.happ  happ.yaml
ui/: package-lock.json  package.json
ui/assets/: compository-cleanup.bat  compository-cleanup.command  compository-launch.bat  compository-launch.command
workdir/: compository.happ  happ.yaml
workdir/file-storage-provider/: compository.happ  happ.yaml
workdir/no-file-storage/: compository.happ  happ.yaml
zomes/compository/: Cargo.toml
zomes/file_storage/: Cargo.toml
(+15 files in other folders)
