[workspace]
members = [
  "zomes/file_storage",
  "zomes/compository",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "3a437ba", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "3a437ba", package = "holo_hash"}
